@@ -6,6 +6,7 @@ aTunes 3.0.5
 - FIX: Error retrieving titles from CD when CD has more tracks than the album information
 - FIX: Drag and drop from navigator
 - FIX: Navigator not immediately updated after import
+- FIX: Store repository folders as list of paths instead of file objects
 - Control+F for advanced search
 
 aTunes 3.0.4
